--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -126,6 +126,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Turn Camera Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Rotate Move",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="M2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Restart Level",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
