some little changes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/L_Persistent.L_Persistent
 EditorStartupMap=/Game/Maps/L_Persistent.L_Persistent
 GlobalDefaultGameMode=/Game/Blueprint/GGP_GM.GGP_GM_C
+GameInstanceClass=/Game/Blueprint/My_Game_instance.My_Game_instance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
